[project]
name = "transcripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "bs4>=0.0.2",
    "crawl4ai>=0.4.248",
    "finance>=0.2502",
    "pandas>=2.2.3",
    "selenium>=4.29.0",
    "webdriver-manager>=4.0.2",
    "yfinance>=0.2.54",
]
